--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-         
-body{
-  @apply bg-[#fffdf0] text-gray-800 font-inter;
+
+body {
+  @apply font-serif text-[#2b2b2b] bg-[#e8e5dc];
 }
-   
-  
